# icm20948-guide

./: LICENSE  README.md
basic/: .gitignore  CMakeLists.txt  compile_project.sh  run_project.sh
basic/src/: CMakeLists.txt  cmake_install.cmake  main.c
basic/src/lib/: ICM20948.c  ICM20948.h  ICM42622.c  ICM42622.h  fonts.c
